Browser permissions entry and minor changes

--- a/website/_config.yml
+++ b/website/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: WebSec!
 subtitle: ''
-description: 'Web Security Educational Course'
+description: 'Web Security Educational Blog'
 keywords:
 author: bubu
 language: en
